--- a/frontend/src/components/Post/Comment.css
+++ b/frontend/src/components/Post/Comment.css
@@ -23,4 +23,7 @@
 .message {
   font-size: 14px;
   margin-top: 5px;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-wrap: break-word;
 }
