--- a/frontend/src/components/Post/index.css
+++ b/frontend/src/components/Post/index.css
@@ -10,6 +10,11 @@
   flex: 1;
 }
 
+.post a {
+  text-decoration: none;
+  color: black;
+}
+
 .post-container {
   height: fit-content;
 }
@@ -21,86 +26,13 @@
   flex-direction: row;
 }
 
-.post-image {
+.post-image img:not(.icon) {
   width: 100%;
   height: 350px;
+  /* TODO: height of images should be same during carousel image change */
   object-fit: cover;
   border-top-left-radius: 10px;
 }
-
-.back-icon-container,
-.forward-icon-container {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-
-  height: 100%;
-  width: 50px;
-  transition: all 0.3s ease-in-out;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-.back-icon-container:hover,
-.forward-icon-container:hover {
-  background-color: rgba(255, 255, 255, 0.75);
-}
-
-.back-icon-container {
-  left: 0;
-  border-top-left-radius: 10px;
-}
-
-.forward-icon-container {
-  right: 0;
-}
-
-.back-icon,
-.forward-icon {
-  height: 24px;
-  object-fit: contain;
-}
-
-/* LIKE BUTTON STYLE VARIANT (on top of the post image) */
-/* downsides:
-    if background color is used - hides part of the image
-    if background color is not used - depending on the post image, might be not visible at all */
-
-/* .post .like-btn-background {
-  position: absolute;
-  bottom: 0;
-  right: -1px;
-  height: 115px;
-  width: 100px;
-  background-color: white;
-  border: 1px solid white;
-  z-index: 0;
-  
-  clip-path: polygon(0 100%, 100% 0, 100% 100%);
-}
-
-.post .like-btn {
-  position: absolute;
-  bottom: 18px;
-  right: 18px;
-  padding: 0;
-  z-index: 1;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 4px;
-} 
-
-.post .like-btn button {
-  margin: 0;
-  padding: 0;
-  max-height: 24px;
-} */
 
 .post .like-icon {
   height: 24px;
@@ -225,4 +157,78 @@
   width: fit-content;
   object-fit: contain;
   margin: 0 16px;
+}
+
+.comments-toggle {
+  display: none; /* don't appear on large screens */
+}
+
+@media screen and (max-width: 945px) {
+  .post {
+    flex-direction: column;
+  }
+
+  .post-image img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
+  .comments-toggle {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 0;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 8px 32px;
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 16px;
+  }
+
+  .comments-toggle > img {
+    flex: 0;
+  }
+
+  .comments-toggle.collapsed {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .comment-icon {
+    height: 24px;
+    width: fit-content;
+    object-fit: contain;
+  }
+
+  .comments-container {
+    margin: 0 24px;
+    padding: 24px 8px;
+    border: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+  }
+
+  .comments-container.collapsed {
+    display: none;
+  }
+
+  .comments {
+    max-height: 250px !important;
+  }
+
+  .add-comment textarea {
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .comments-container {
+    padding: 24px 0;
+  }
+
+  .comments-container {
+    margin: 0 24px;
+  }
 }
